[tool.poetry]
name = "st.artifacts"
version = "0.1.0"
description = ""
authors = ["moritalous <moritalous@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
boto3 = "^1.35.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
